--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "devDependencies": {
+    "@types/react": "^18.2.55",
+    "@types/react-dom": "^18.2.19",
     "prettier": "3.2.5",
     "vite": "^5.0.11"
   },
   "scripts": {
     "dev": "vite",
-    "build": "vite build"
+    "build": "npm test && vite build",
+    "test": "prettier --check . && tsc --noEmit"
   },
   "dependencies": {
     "ol": "^8.2.0",
