--- a/package.json
+++ b/package.json
@@ -2,13 +2,15 @@
   "devDependencies": {
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
+    "husky": "^9.0.11",
     "prettier": "3.2.5",
     "vite": "^5.0.11"
   },
   "scripts": {
     "dev": "vite",
     "build": "npm test && vite build",
-    "test": "prettier --check . && tsc --noEmit"
+    "test": "prettier --check . && tsc --noEmit",
+    "prepare": "husky"
   },
   "dependencies": {
     "ol": "^8.2.0",
